style/globals.css
@import "tailwindcss";
@import "tw-animate-css";

@custom-variant dark (&:is(.dark *));

@theme {
  /* Typography */
  --font-geist: "Geist", sans-serif;
  --font-yekanbakh: "Yekan Bakh", "sans-serif";
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-secondary-background: var(--secondary-background);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-tertiary-foreground: var(--tertiary-foreground);
  --color-results-background: var(--results-background);
  --color-category-description: var(--category-description);
  --color-header-background: var(--header-background);
  --color-header-foreground: var(--header-foreground);
  --color-megamenu-background: var(--megamenu-background);
  --color-footer-background: var(--footer-background);
  --color-footer-foreground: var(--footer-foreground);
  --color-input-placeholder: var(--input-placeholder);
  --color-input-background: var(--input-background);
  --color-input-border: var(--input-border);
  --color-hover: var(--hover);
  --color-hover-secondary: var(--hover-secondary);
  --color-sidebar-ring: var(--sidebar-ring);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar: var(--sidebar);
  --color-chart-5: var(--chart-5);
  --color-chart-4: var(--chart-4);
  --color-chart-3: var(--chart-3);
  --color-chart-2: var(--chart-2);
  --color-chart-1: var(--chart-1);
  --color-ring: var(--ring);
  --color-input: var(--input);
  --color-border: var(--border);
  --color-destructive: var(--destructive);
  --color-accent-foreground: var(--accent-foreground);
  --color-accent: var(--accent);
  --color-muted-foreground: var(--muted-foreground);
  --color-muted: var(--muted);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-secondary: var(--secondary);
  --color-primary-foreground: var(--primary-foreground);
  --color-primary: var(--primary);
  --color-popover-foreground: var(--popover-foreground);
  --color-popover: var(--popover);
  --color-card-foreground: var(--card-foreground);
  --color-card: var(--card);
  --font-sans: var(--font-geist-sans);
  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);
  --radius-custom: var(--radius-custom);
}

:root {
  --radius-custom: 1rem;
  --radius: 0.625rem;
  --background: oklch(0.9702 0 0);
  --foreground: oklch(0.145 0 0);
  --secondary-background: oklch(0.8717 0.0093 258.34);
  --secondary-foreground: oklch(0.2795 0.0368 260.03);
  --tertiary-foreground: oklch(0.5486 0 0);
  --results-background: oklch(0.9494 0.0241 259.82);
  --category-description: oklch(0.3979 0 0);
  --header-background: oklch(0.2795 0.0368 260.03);
  --header-foreground: oklch(0.9702 0 0);
  --megamenu-background: oklch(1 0 0);
  --footer-background: oklch(0.8717 0.0093 258.34);
  --footer-foreground: oklch(0.5486 0 0);
  --input-placeholder: oklch(0.2795 0.0368 260.03);
  --input-background: oklch(0.9189 0 0);
  --input-border: oklch(0.9189 0 0);
  --hover: oklch(0.8717 0.0093 258.34);
  --hover-secondary: oklch(0.5486 0 0);
  --card: oklch(1 0 0);
  --card-foreground: oklch(0.145 0 0);
  --popover: oklch(1 0 0);
  --popover-foreground: oklch(0.145 0 0);
  --primary: oklch(0.9052 0.1657 98.11);
  --primary-foreground: oklch(0.985 0 0);
  --secondary: oklch(0.97 0 0);
  --secondary-foreground: oklch(0.205 0 0);
  --muted: oklch(0.97 0 0);
  --muted-foreground: oklch(0.556 0 0);
  --accent: oklch(0.97 0 0);
  --accent-foreground: oklch(0.205 0 0);
  --destructive: oklch(0.577 0.245 27.325);
  --border: oklch(0.8717 0.0093 258.34);
  --input: oklch(0.922 0 0);
  --ring: oklch(0.708 0 0);
  --chart-1: oklch(0.646 0.222 41.116);
  --chart-2: oklch(0.6 0.118 184.704);
  --chart-3: oklch(0.398 0.07 227.392);
  --chart-4: oklch(0.828 0.189 84.429);
  --chart-5: oklch(0.769 0.188 70.08);
  --sidebar: oklch(0.985 0 0);
  --sidebar-foreground: oklch(0.145 0 0);
  --sidebar-primary: oklch(0.205 0 0);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.97 0 0);
  --sidebar-accent-foreground: oklch(0.205 0 0);
  --sidebar-border: oklch(0.922 0 0);
  --sidebar-ring: oklch(0.708 0 0);
}

.dark {
  --background: oklch(0.9702 0 0);
  --foreground: oklch(0.1448 0 0);
  --secondary-background: oklch(0.8717 0.0093 258.34);
  --secondary-foreground: oklch(0.2795 0.0368 260.03);
  --tertiary-foreground: oklch(0.5486 0 0);
  --results-background: oklch(0.9494 0.0241 259.82);
  --category-description: oklch(0.3979 0 0);
  --header-background: oklch(0.2795 0.0368 260.03);
  --megamenu-background: oklch(1 0 0);
  --header-foreground: oklch(0.9702 0 0);
  --footer-background: oklch(0.8717 0.0093 258.34);
  --footer-foreground: oklch(0.5486 0 0);
  --input-placeholder: oklch(0.2795 0.0368 260.03);
  --input-background: oklch(0.9189 0 0);
  --input-border: oklch(0.9189 0 0);
  --hover: oklch(0.8717 0.0093 258.34);
  --hover-secondary: oklch(0.5486 0 0);
  --card: oklch(0.205 0 0);
  --card-foreground: oklch(0.985 0 0);
  --popover: oklch(0.205 0 0);
  --popover-foreground: oklch(0.985 0 0);
  --primary: oklch(0.9052 0.1657 98.11);
  --primary-foreground: oklch(0.205 0 0);
  --secondary: oklch(0.269 0 0);
  --secondary-foreground: oklch(0.3979 0 0);
  --muted: oklch(0.269 0 0);
  --muted-foreground: oklch(0.708 0 0);
  --accent: oklch(0.269 0 0);
  --accent-foreground: oklch(0.985 0 0);
  --destructive: oklch(0.704 0.191 22.216);
  --border: oklch(1 0 0 / 10%);
  --input: oklch(0.8717 0.0093 258.34);
  --ring: oklch(0.556 0 0);
  --chart-1: oklch(0.488 0.243 264.376);
  --chart-2: oklch(0.696 0.17 162.48);
  --chart-3: oklch(0.769 0.188 70.08);
  --chart-4: oklch(0.627 0.265 303.9);
  --chart-5: oklch(0.645 0.246 16.439);
  --sidebar: oklch(0.205 0 0);
  --sidebar-foreground: oklch(0.985 0 0);
  --sidebar-primary: oklch(0.488 0.243 264.376);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.269 0 0);
  --sidebar-accent-foreground: oklch(0.985 0 0);
  --sidebar-border: oklch(1 0 0 / 10%);
  --sidebar-ring: oklch(0.556 0 0);
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }

  html.font-fa {
    --font: var(--font-yekanbakh);
  }

  html.font-en {
    --font: var(--font-geist-sans);
  }

  button {
    @apply cursor-pointer;
  }

  /* Body - RTL Support */
  body {
    @apply bg-background text-foreground;
    font-family: var(--font);

    /* Smooth color transitions when theme changes */
    transition:
      background-color 0.3s ease,
      color 0.3s ease;
  }
}

/* Mega Menu Custom Styles */
.navbar-item {
  position: relative;
  display: flex;
  align-items: center;
  width: 100%;
  cursor: pointer;
  border-radius: var(--radius-custom);
  padding: 0.25rem 0.75rem;
  font-size: 1rem;
  font-weight: 600;
  transition: all 0.3s ease;
  box-shadow: -4px 0 0 2 var(--background);
}

.navbar-item.active {
  z-index: -1;
  border-radius: 100vw 0 0 100vw;
  background-color: white;
  display: block;
  position: relative;
}

.navbar-item.active::before,
.navbar-item.active::after {
  --border-radius-custom: 1rem;

  content: "";
  position: absolute;
  width: var(--border-radius-custom);
  height: var(--border-radius-custom);
  left: 0;
  background: var(--background);
}

.navbar-item.active::before {
  border-radius: 0 0 0 var(--border-radius-custom);
  top: calc(var(--border-radius-custom) * -1);
  box-shadow: -5px 5px 0 5px #fff;
}

.navbar-item.active::after {
  border-radius: var(--border-radius-custom) 0 0 0;
  bottom: calc(var(--border-radius-custom) * -1);
  box-shadow: -5px -5px 0 5px #fff;
}

.navbar-item.inactive:hover {
  background: var(--secondary-background);
}

